force-app/main/default/objects/Athlete__c/Athlete__c.object-meta.xml
<CustomObject>
    <description>Fiche pivot athlete pour Athlete 360.</description>
    <label>Athlete</label>
    <nameField>
        <label>Athlete Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Athletes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>