force-app/main/default/objects/Athlete__c/fields/Accel3_7d__c.field-meta.xml
<CustomField>
    <description>Nombre d'accélérations >3 m/s2 sur 7 jours.</description>
    <fullName>Accel3_7d__c</fullName>
    <label>Accel 3 7d</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>