force-app/main/default/objects/Athlete__c/fields/AthleteSummary__c.field-meta.xml
<CustomField>
    <description>Résumé exécutif de l'athlète (Data Cloud/IA).</description>
    <fullName>AthleteSummary__c</fullName>
    <label>Athlete Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>