force-app/main/default/objects/Athlete__c/fields/CurrentSquad__c.field-meta.xml
<CustomField>
    <fullName>CurrentSquad__c</fullName>
    <label>Current Squad</label>
    <referenceTo>Squad__c</referenceTo>
    <relationshipLabel>Current Squad Athletes</relationshipLabel>
    <relationshipName>CurrentSquadAthletes</relationshipName>
    <type>Lookup</type>
</CustomField>