force-app/main/default/objects/Athlete__c/fields/Decel3_7d__c.field-meta.xml
<CustomField>
    <description>Nombre de décélérations >3 m/s2 sur 7 jours.</description>
    <fullName>Decel3_7d__c</fullName>
    <label>Decel 3 7d</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>