force-app/main/default/objects/Athlete__c/fields/Distance7d__c.field-meta.xml
<CustomField>
    <description>Distance totale sur 7 jours (mètres).</description>
    <fullName>Distance7d__c</fullName>
    <label>Distance 7d</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>