force-app/main/default/objects/Athlete__c/fields/DuelWinPct5__c.field-meta.xml
<CustomField>
    <description>Taux de duels gagnés sur les 5 derniers matchs.</description>
    <fullName>DuelWinPct5__c</fullName>
    <label>Duel Win Pct 5</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>