force-app/main/default/objects/Athlete__c/fields/FeaturesJson__c.field-meta.xml
<CustomField>
    <description>Snapshot JSON des features athlete.</description>
    <fullName>FeaturesJson__c</fullName>
    <label>Features JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>