force-app/main/default/objects/Athlete__c/fields/Hid15_7d__c.field-meta.xml
<CustomField>
    <description>Distance haute intensité >15 km/h sur 7 jours.</description>
    <fullName>Hid15_7d__c</fullName>
    <label>HID 15 7d</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>