force-app/main/default/objects/Athlete__c/fields/Hid20_7d__c.field-meta.xml
<CustomField>
    <description>Distance haute intensité >20 km/h sur 7 jours.</description>
    <fullName>Hid20_7d__c</fullName>
    <label>HID 20 7d</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>