force-app/main/default/objects/Athlete__c/fields/InjuryRiskScore__c.field-meta.xml
<CustomField>
    <description>Score de risque blessure activé depuis Data Cloud (0-100).</description>
    <fullName>InjuryRiskScore__c</fullName>
    <label>Injury Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>