force-app/main/default/objects/Athlete__c/fields/LastAcwrAlertAt__c.field-meta.xml
<CustomField>
    <description>Dernier envoi d'alerte ACWR (cooldown 24h).</description>
    <fullName>LastAcwrAlertAt__c</fullName>
    <label>Last ACWR Alert At</label>
    <type>DateTime</type>
</CustomField>