force-app/main/default/objects/Athlete__c/fields/LastDataCloudSync__c.field-meta.xml
<CustomField>
    <description>Dernière synchro globale Data Cloud.</description>
    <fullName>LastDataCloudSync__c</fullName>
    <label>Last Data Cloud Sync</label>
    <type>DateTime</type>
</CustomField>