force-app/main/default/objects/Athlete__c/fields/LastInjuryAlertAt__c.field-meta.xml
<CustomField>
    <description>Dernier envoi d'alerte risque blessure (cooldown 24h).</description>
    <fullName>LastInjuryAlertAt__c</fullName>
    <label>Last Injury Alert At</label>
    <type>DateTime</type>
</CustomField>