force-app/main/default/objects/Athlete__c/fields/LastMatchSync__c.field-meta.xml
<CustomField>
    <description>Dernière synchro match Data Cloud.</description>
    <fullName>LastMatchSync__c</fullName>
    <label>Last Match Sync</label>
    <type>DateTime</type>
</CustomField>