force-app/main/default/objects/Athlete__c/fields/LastTrainingSync__c.field-meta.xml
<CustomField>
    <description>Dernière synchro training Data Cloud.</description>
    <fullName>LastTrainingSync__c</fullName>
    <label>Last Training Sync</label>
    <type>DateTime</type>
</CustomField>