force-app/main/default/objects/Athlete__c/fields/Load7d__c.field-meta.xml
<CustomField>
    <description>Charge d'entraînement sur 7 jours.</description>
    <fullName>Load7d__c</fullName>
    <label>Load 7d</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>