force-app/main/default/objects/Athlete__c/fields/LoadTrend__c.field-meta.xml
<CustomField>
    <description>Tendance de charge calculée (up/down/stable).</description>
    <fullName>LoadTrend__c</fullName>
    <label>Load Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
                <default>true</default>
                <label>Stable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>