force-app/main/default/objects/Athlete__c/fields/Matches5__c.field-meta.xml
<CustomField>
    <description>Nombre de matchs joués sur les 5 derniers matchs.</description>
    <fullName>Matches5__c</fullName>
    <label>Matches 5</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>