force-app/main/default/objects/Athlete__c/fields/MaxSpeed7d__c.field-meta.xml
<CustomField>
    <description>Vitesse max sur 7 jours (km/h).</description>
    <fullName>MaxSpeed7d__c</fullName>
    <label>Max Speed 7d</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>