force-app/main/default/objects/Athlete__c/fields/MinutesMatch28d__c.field-meta.xml
<CustomField>
    <description>Minutes jouées en match sur 28 jours.</description>
    <fullName>MinutesMatch28d__c</fullName>
    <label>Minutes Match 28d</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>