force-app/main/default/objects/Athlete__c/fields/MinutesMatch7d__c.field-meta.xml
<CustomField>
    <description>Minutes jouées en match sur 7 jours.</description>
    <fullName>MinutesMatch7d__c</fullName>
    <label>Minutes Match 7d</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>