force-app/main/default/objects/Athlete__c/fields/PassAccuracy5__c.field-meta.xml
<CustomField>
    <description>Précision de passe moyenne sur les 5 derniers matchs.</description>
    <fullName>PassAccuracy5__c</fullName>
    <label>Pass Accuracy 5</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>