force-app/main/default/objects/Athlete__c/fields/PerformanceTrend__c.field-meta.xml
<CustomField>
    <description>Tendance performance match (up/down/stable).</description>
    <fullName>PerformanceTrend__c</fullName>
    <label>Performance Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
                <default>true</default>
                <label>Stable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>