force-app/main/default/objects/Athlete__c/fields/PhotoUrl__c.field-meta.xml
<CustomField>
    <description>URL portrait joueur (ex. API-Football media.api-sports.io).</description>
    <fullName>PhotoUrl__c</fullName>
    <label>Photo URL</label>
    <type>Url</type>
</CustomField>