force-app/main/default/objects/Athlete__c/fields/ProgPass90_5__c.field-meta.xml
<CustomField>
    <description>Passes progressives par 90 sur les 5 derniers matchs.</description>
    <fullName>ProgPass90_5__c</fullName>
    <label>Prog Pass 90 5</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>