force-app/main/default/objects/Athlete__c/fields/ReadinessScore__c.field-meta.xml
<CustomField>
    <description>Score readiness activé depuis Data Cloud (0-100).</description>
    <fullName>ReadinessScore__c</fullName>
    <label>Readiness Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>