force-app/main/default/objects/Athlete__c/fields/Recoveries90_5__c.field-meta.xml
<CustomField>
    <description>Récupérations par 90 sur les 5 derniers matchs.</description>
    <fullName>Recoveries90_5__c</fullName>
    <label>Recoveries 90 5</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>