force-app/main/default/objects/Athlete__c/fields/SessionCount7d__c.field-meta.xml
<CustomField>
    <description>Nombre de séances sur 7 jours.</description>
    <fullName>SessionCount7d__c</fullName>
    <label>Session Count 7d</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>