force-app/main/default/objects/Athlete__c/fields/SessionDuration7d__c.field-meta.xml
<CustomField>
    <description>Minutes d'entraînement sur 7 jours.</description>
    <fullName>SessionDuration7d__c</fullName>
    <label>Session Duration 7d</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>