force-app/main/default/objects/Athlete__c/fields/ShotsOnTargetPct5__c.field-meta.xml
<CustomField>
    <description>Pourcentage de tirs cadrés sur les 5 derniers matchs.</description>
    <fullName>ShotsOnTargetPct5__c</fullName>
    <label>Shots On Target Pct 5</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>