force-app/main/default/objects/Athlete__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <length>80</length>
    <type>Text</type>
</CustomField>