force-app/main/default/objects/Athlete__c/fields/Sprints25_7d__c.field-meta.xml
<CustomField>
    <description>Nombre de sprints >25 km/h sur 7 jours.</description>
    <fullName>Sprints25_7d__c</fullName>
    <label>Sprints 25 7d</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>