force-app/main/default/objects/Athlete__c/fields/TopStrengths__c.field-meta.xml
<CustomField>
    <description>Top points forts de l'athlète.</description>
    <fullName>TopStrengths__c</fullName>
    <label>Top Strengths</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>