force-app/main/default/objects/Athlete__c/fields/xA5__c.field-meta.xml
<CustomField>
    <description>xA cumulé sur les 5 derniers matchs.</description>
    <fullName>xA5__c</fullName>
    <label>xA 5</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>