force-app/main/default/objects/Athlete__c/fields/xG5__c.field-meta.xml
<CustomField>
    <description>xG cumulé sur les 5 derniers matchs.</description>
    <fullName>xG5__c</fullName>
    <label>xG 5</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>